# fedimint-filestorage

./: .tmuxinator.yml  Cargo.toml  README.md
client/cli/src/: main.rs
client/client-lib/: Cargo.toml
client/client-lib/src/: api.rs  lib.rs
client/client-lib/src/mint/: mod.rs
client/client-lib/src/smolfs/: mod.rs
docs/: building-new-modules.md
fedimint-api/src/: core.rs
fedimint-api/src/db/: mod.rs
fedimint-api/src/module/: mod.rs
fedimint-core/: Cargo.toml
fedimint-core/src/: lib.rs
fedimint-server/src/: config.rs  lib.rs
fedimint-server/src/consensus/: mod.rs
fedimint-testing/: Cargo.toml
fedimint-testing/src/: lib.rs
fedimintd/: Cargo.toml
fedimintd/src/: distributedgen.rs  ui.rs
gateway/cli/src/: main.rs
integrationtests/: Cargo.toml
integrationtests/tests/: tests.rs
integrationtests/tests/fixtures/: mod.rs
modules/fedimint-dummy/src/: db.rs  lib.rs
modules/fedimint-simple/src/: common.rs  config.rs  db.rs  lib.rs
modules/fedimint-simple/src/contracts/: incoming.rs  outgoing.rs
modules/fedimint-simple/tests/: ln_contracts.rs
modules/fedimint-smol/: Cargo.toml
modules/fedimint-smol/src/: lib.rs
modules/fedimint-smolfs/: Cargo 2.toml  Cargo.toml
modules/fedimint-smolfs/src/: common.rs  config 2.rs  config.rs  db.rs  lib 2.rs  lib.rs
modules/fedimint-wallet/src/: lib.rs
scripts/: lib.sh  pegin.sh  setup-tests.sh  tmux-user-shell.sh
