[package]
name = "fedimint-smolfs"
version = "0.1.0"
authors = ["The Fedimint Developers"]
edition = "2021"
description = "fedimint-dummy is a dummy example fedimint module."
license = "MIT"

[lib]
name = "fedimint_smolfs"
path = "src/lib.rs"

[dependencies]
anyhow = "1.0.66"
bitcoin = { version = "0.29.2", features = [ "rand", "serde"] }
async-trait = "0.1"
futures = "0.3"
fedimint-api = { path = "../../fedimint-api" }
rand = "0.8"
rayon = "1.6.1"
serde = { version = "1.0.149", features = [ "derive" ] }
strum = "0.24"
strum_macros = "0.24"
impl-tools = "0.6.1"
thiserror = "1.0.37"
secp256k1 = "0.24.2"
tracing ="0.1.37"
